added GET methods for User Resource

--- a/RestfulWebService/src/main/resources/application.properties
+++ b/RestfulWebService/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+logging.level.org.springframework=info
+#prior to spring 2.0 where it used to print timestamp (not required now)spring.jackson.serialization.write-dates-as-timestamps=false
